# COMS_557_2015_mg

./: README.md
FinalProject/: README.md
FinalProject/SourceCode/: CMakeCache.txt  cmake_install.cmake  main.cpp
FinalProject/SourceCode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
FinalProject/SourceCode/Debug/: HCI557_ObjLoader
FinalProject/SourceCode/FinalProject.xcodeproj/: project.pbxproj
FinalProject/SourceCode/lib/: ChessGame.cpp  ChessGame.h  ChessPiece.h  ObjectIdFactory.h  PieceFactory.h
FinalProject/data/: .queen.obj.swp
FinalProject/gl_common/: CoordSystem.h  GLAppearance.h  GLAppearanceBase.h  GLObject.h  GLObjectObj.h  GLSphere.h  HCI557Common.h  HCI557Datatypes.h  Plane3D.h  RayIntersectionTest.h  Shaders.h  Sphere3D.h  Texture.h  camera.h
Homework_2/p2/: HCI557Common.cpp
Homework_3/SDK/: CMakeCache.txt  cmake_install.cmake
Homework_3/SDK/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
Homework_3/SDK/OpenGL_CS557.xcodeproj/: project.pbxproj
Homework_3/SDK/glew-1.13.0/: cmake_install.cmake
Homework_3/SDK/glfw-3.1.1/: cmake_install.cmake  cmake_uninstall.cmake
Homework_3/SDK/glfw-3.1.1/CMakeScripts/: uninstall_cmakeRulesBuildPhase.makeMinSizeRel
Homework_3/SDK/glfw-3.1.1/examples/: cmake_install.cmake
Homework_3/SDK/glfw-3.1.1/src/: cmake_install.cmake
Homework_3/SDK/glfw-3.1.1/tests/: cmake_install.cmake
Homework_3/SDK/glm-0.9.6.3/: CTestTestfile.cmake  cmake_install.cmake
Homework_3/SDK/glm-0.9.6.3/glm/: CTestTestfile.cmake  cmake_install.cmake
Homework_3/SDK/glm-0.9.6.3/test/: CTestTestfile.cmake  cmake_install.cmake
Homework_3/SDK/glm-0.9.6.3/util/: CTestTestfile.cmake  cmake_install.cmake
Homework_3/gl_common/: GLSphere.cpp
Homework_3/p1/: GLSphereDirect.cpp  main_p1.cpp
Homework_3/p1/report/: report.md
Homework_3/p2/: GLSphereBlue.h  GLSphereGreen.h  GLSphereRed.h  GLSphereYellow.h  main_p2.cpp
Homework_4/data/shaders/: hw4_p1.fs  hw4_p2.fs  hw4_p2.vs
Homework_4/gl_common/: Texture.cpp  Texture.h
Homework_4/gl_common_p1/: Plane3D.cpp  Shaders.h  Texture.cpp  Texture.h
Homework_4/p1/: CMakeLists.txt  main_multi_texture.cpp
Homework_4/p2/: CMakeLists.txt  main_multi_texture.cpp
Homework_4/p2/report/: hw4_p2_report.tex
assignments/Homework_2/p1/: main.cpp
assignments/Homework_2/p2/: HCI557Common.h  controls.cpp  controls.h  hw2_main.cpp
(+46 files in other folders)
